// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builder store > can add entities to a parent entity 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can add entities to a parent entity at a specific index 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        ],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can add entities to root 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can add entities to root at specific index 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can be created with a non-empty schema 1`] = `
[MockFunction validateSchemaShape] {
  "calls": [
    [
      {
        "entities": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "attributes": {
              "label": "test",
            },
            "type": "text",
          },
        },
        "root": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
      },
      {
        "entities": {
          "text": {
            "attributes": {
              "label": {
                "validate": [Function],
              },
            },
            "attributesExtensions": {},
            "childrenAllowed": false,
            "defaultValue": [Function],
            "metadata": undefined,
            "parentRequired": false,
            "shouldBeProcessed": [Function],
            "validate": [Function],
            "valueAllowed": false,
          },
        },
        "entitiesExtensions": {},
        "generateEntityId": [Function],
        "validateEntityId": [Function],
        "validateSchema": [Function],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "data": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "test",
              },
              "type": "text",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "success": true,
      },
    },
  ],
}
`;

exports[`builder store > can be created with a non-empty schema 2`] = `
{
  "addEntity": [Function],
  "builder": {
    "entities": {
      "text": {
        "attributes": {
          "label": {
            "validate": [Function],
          },
        },
        "attributesExtensions": {},
        "childrenAllowed": false,
        "defaultValue": [Function],
        "metadata": undefined,
        "parentRequired": false,
        "shouldBeProcessed": [Function],
        "validate": [Function],
        "valueAllowed": false,
      },
    },
    "entitiesExtensions": {},
    "generateEntityId": [Function],
    "validateEntityId": [Function],
    "validateSchema": [Function],
  },
  "cloneEntity": [Function],
  "deleteEntity": [Function],
  "getData": [Function],
  "getEntitiesAttributesErrors": [Function],
  "getEntity": [Function],
  "getSchema": [Function],
  "getSchemaError": [Function],
  "resetEntitiesAttributesErrors": [Function],
  "resetEntityAttributeError": [Function],
  "resetEntityAttributesErrors": [Function],
  "resetSchemaError": [Function],
  "setData": [Function],
  "setEntitiesAttributesErrors": [Function],
  "setEntityAttribute": [Function],
  "setEntityAttributeError": [Function],
  "setEntityAttributesErrors": [Function],
  "setEntityIndex": [Function],
  "setEntityParent": [Function],
  "setSchemaError": [Function],
  "subscribe": [Function],
  "unsetEntityParent": [Function],
  "validateEntitiesAttributes": [Function],
  "validateEntityAttribute": [Function],
  "validateEntityAttributes": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder store > can be created with an empty schema 1`] = `
[MockFunction validateSchemaShape] {
  "calls": [
    [
      {
        "entities": {},
        "root": [],
      },
      {
        "entities": {},
        "entitiesExtensions": {},
        "generateEntityId": [Function],
        "validateEntityId": [Function],
        "validateSchema": [Function],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "data": {
          "entities": {},
          "root": [],
        },
        "success": true,
      },
    },
  ],
}
`;

exports[`builder store > can be created with an empty schema 2`] = `
{
  "addEntity": [Function],
  "builder": {
    "entities": {},
    "entitiesExtensions": {},
    "generateEntityId": [Function],
    "validateEntityId": [Function],
    "validateSchema": [Function],
  },
  "cloneEntity": [Function],
  "deleteEntity": [Function],
  "getData": [Function],
  "getEntitiesAttributesErrors": [Function],
  "getEntity": [Function],
  "getSchema": [Function],
  "getSchemaError": [Function],
  "resetEntitiesAttributesErrors": [Function],
  "resetEntityAttributeError": [Function],
  "resetEntityAttributesErrors": [Function],
  "resetSchemaError": [Function],
  "setData": [Function],
  "setEntitiesAttributesErrors": [Function],
  "setEntityAttribute": [Function],
  "setEntityAttributeError": [Function],
  "setEntityAttributesErrors": [Function],
  "setEntityIndex": [Function],
  "setEntityParent": [Function],
  "setSchemaError": [Function],
  "subscribe": [Function],
  "unsetEntityParent": [Function],
  "validateEntitiesAttributes": [Function],
  "validateEntityAttribute": [Function],
  "validateEntityAttributes": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder store > can be created without a schema 1`] = `
{
  "addEntity": [Function],
  "builder": {
    "entities": {},
    "entitiesExtensions": {},
    "generateEntityId": [Function],
    "validateEntityId": [Function],
    "validateSchema": [Function],
  },
  "cloneEntity": [Function],
  "deleteEntity": [Function],
  "getData": [Function],
  "getEntitiesAttributesErrors": [Function],
  "getEntity": [Function],
  "getSchema": [Function],
  "getSchemaError": [Function],
  "resetEntitiesAttributesErrors": [Function],
  "resetEntityAttributeError": [Function],
  "resetEntityAttributesErrors": [Function],
  "resetSchemaError": [Function],
  "setData": [Function],
  "setEntitiesAttributesErrors": [Function],
  "setEntityAttribute": [Function],
  "setEntityAttributeError": [Function],
  "setEntityAttributesErrors": [Function],
  "setEntityIndex": [Function],
  "setEntityParent": [Function],
  "setSchemaError": [Function],
  "subscribe": [Function],
  "unsetEntityParent": [Function],
  "validateEntitiesAttributes": [Function],
  "validateEntityAttribute": [Function],
  "validateEntityAttributes": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder store > can change entity's index 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [
          "7c3cf1e5-c35d-49c0-80ca-e8000ac8095e",
          "eedf598e-1422-469a-acb1-b2d8bfabb0f3",
        ],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
      "7c3cf1e5-c35d-49c0-80ca-e8000ac8095e": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "eedf598e-1422-469a-acb1-b2d8bfabb0f3": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can clone entities 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > can clone entities 2`] = `
{
  "entities": {
    "0a97c57c-7743-403c-8105-a8c09eb5ab52": {
      "attributes": {
        "label": undefined,
      },
      "children": [
        "4fb898fb-7207-4952-8e5e-511953a42e2c",
      ],
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "1c2ec3a4-18a8-4785-906e-6465b9b5883b": {
      "attributes": {
        "label": undefined,
      },
      "parentId": "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52",
      "type": "test",
    },
    "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52": {
      "attributes": {
        "label": undefined,
      },
      "children": [
        "1c2ec3a4-18a8-4785-906e-6465b9b5883b",
      ],
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "38c62f6a-634a-4b94-b0af-9b95e6c1dc82": {
      "attributes": {
        "label": undefined,
      },
      "parentId": "49ae95d3-84c0-4d0d-b914-66adde839572",
      "type": "test",
    },
    "49ae95d3-84c0-4d0d-b914-66adde839572": {
      "attributes": {
        "label": undefined,
      },
      "children": [
        "55c0940d-7450-4b01-baf8-b84c05ea5cee",
        "38c62f6a-634a-4b94-b0af-9b95e6c1dc82",
      ],
      "type": "test",
    },
    "4fb898fb-7207-4952-8e5e-511953a42e2c": {
      "attributes": {
        "label": undefined,
      },
      "parentId": "0a97c57c-7743-403c-8105-a8c09eb5ab52",
      "type": "test",
    },
    "51324b32-adc3-4d17-a90e-66b5453935bd": {
      "attributes": {
        "label": undefined,
      },
      "children": [
        "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52",
        "0a97c57c-7743-403c-8105-a8c09eb5ab52",
      ],
      "type": "test",
    },
    "55c0940d-7450-4b01-baf8-b84c05ea5cee": {
      "attributes": {
        "label": undefined,
      },
      "parentId": "49ae95d3-84c0-4d0d-b914-66adde839572",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "attributes": {
        "label": undefined,
      },
      "children": [
        "8f2336ba-d7a2-4e1e-ad13-2c80cf61499b",
        "b5a5a63e-dbfa-485c-bd3c-8dd23b996b7d",
      ],
      "type": "test",
    },
    "8f2336ba-d7a2-4e1e-ad13-2c80cf61499b": {
      "attributes": {
        "label": undefined,
      },
      "parentId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "type": "test",
    },
    "b5a5a63e-dbfa-485c-bd3c-8dd23b996b7d": {
      "attributes": {
        "label": undefined,
      },
      "parentId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "type": "test",
    },
  },
  "root": [
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "49ae95d3-84c0-4d0d-b914-66adde839572",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  ],
}
`;

exports[`builder store > can clone entities 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "1c2ec3a4-18a8-4785-906e-6465b9b5883b": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52",
              "type": "test",
            },
            "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52": {
              "attributes": {
                "label": undefined,
              },
              "children": [
                "1c2ec3a4-18a8-4785-906e-6465b9b5883b",
              ],
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "label": undefined,
              },
              "children": [
                "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52",
              ],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
              },
              "children": [
                "8f2336ba-d7a2-4e1e-ad13-2c80cf61499b",
                "b5a5a63e-dbfa-485c-bd3c-8dd23b996b7d",
              ],
              "type": "test",
            },
            "8f2336ba-d7a2-4e1e-ad13-2c80cf61499b": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "type": "test",
            },
            "b5a5a63e-dbfa-485c-bd3c-8dd23b996b7d": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "1c2ec3a4-18a8-4785-906e-6465b9b5883b": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52",
              "type": "test",
            },
            "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52": {
              "attributes": {
                "label": undefined,
              },
              "children": [
                "1c2ec3a4-18a8-4785-906e-6465b9b5883b",
              ],
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
            "38c62f6a-634a-4b94-b0af-9b95e6c1dc82": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "49ae95d3-84c0-4d0d-b914-66adde839572",
              "type": "test",
            },
            "49ae95d3-84c0-4d0d-b914-66adde839572": {
              "attributes": {
                "label": undefined,
              },
              "children": [
                "55c0940d-7450-4b01-baf8-b84c05ea5cee",
                "38c62f6a-634a-4b94-b0af-9b95e6c1dc82",
              ],
              "type": "test",
            },
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "label": undefined,
              },
              "children": [
                "3194bbe0-b2f3-4d5c-b118-3cce0f72ff52",
              ],
              "type": "test",
            },
            "55c0940d-7450-4b01-baf8-b84c05ea5cee": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "49ae95d3-84c0-4d0d-b914-66adde839572",
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
              },
              "children": [
                "8f2336ba-d7a2-4e1e-ad13-2c80cf61499b",
                "b5a5a63e-dbfa-485c-bd3c-8dd23b996b7d",
              ],
              "type": "test",
            },
            "8f2336ba-d7a2-4e1e-ad13-2c80cf61499b": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "type": "test",
            },
            "b5a5a63e-dbfa-485c-bd3c-8dd23b996b7d": {
              "attributes": {
                "label": undefined,
              },
              "parentId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "49ae95d3-84c0-4d0d-b914-66adde839572",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can delete entities and cascade delete their children 1`] = `
{
  "entitiesAttributesErrors": {
    "49e91328-02bc-4daa-ab56-619554e85cff": {},
  },
  "schema": {
    "entities": {
      "49e91328-02bc-4daa-ab56-619554e85cff": {
        "attributes": {},
        "children": [],
        "type": "test",
      },
    },
    "root": [
      "49e91328-02bc-4daa-ab56-619554e85cff",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can delete entities and cascade delete their children 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {
          "49e91328-02bc-4daa-ab56-619554e85cff": {},
        },
        "schema": {
          "entities": {
            "3dc165dd-88d4-4884-ac8a-5d107d023e54": {
              "attributes": {},
              "children": [
                "c1ab14a4-41db-4531-9a58-4825a9ef6d26",
              ],
              "type": "test",
            },
            "49e91328-02bc-4daa-ab56-619554e85cff": {
              "attributes": {},
              "children": [],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "parentId": "c1ab14a4-41db-4531-9a58-4825a9ef6d26",
              "type": "test",
            },
            "c1ab14a4-41db-4531-9a58-4825a9ef6d26": {
              "attributes": {},
              "children": [
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
              ],
              "parentId": "3dc165dd-88d4-4884-ac8a-5d107d023e54",
              "type": "test",
            },
          },
          "root": [
            "3dc165dd-88d4-4884-ac8a-5d107d023e54",
            "49e91328-02bc-4daa-ab56-619554e85cff",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can move an entity from root to a parent entity 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity from root to a parent entity 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "children": [
                "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
              ],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "type": "test",
            },
            "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can move an entity from root to a parent entity at a specific index 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        ],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity from root to a parent entity at a specific index 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "children": [
                "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
              ],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "type": "test",
            },
            "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can move an entity in a parent entity 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        ],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity in a parent entity 2`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
        "attributes": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity in a parent entity 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "children": [
                "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
              ],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
            "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "children": [
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
                "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
              ],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
            "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can move an entity in root 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity in root 2`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity in root 3`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity in root 4`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can move an entity to root 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
    },
    "root": [
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity to root 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "children": [
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
              ],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can move an entity to root at a specific index 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {},
        "children": [],
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {},
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can move an entity to root at a specific index 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {},
              "children": [
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
              ],
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
          "root": [
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can reset a single entity attribute error 1`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "label error",
      "title": "title error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "select",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can reset a single entity attribute error 2`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "title": "title error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "select",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can reset a single entity attribute error 3`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > can reset a single entity attribute error 4`] = `"Entity of type \\"select\\" does not have an attribute named \\"invalid\\"."`;

exports[`builder store > can reset a single entity attribute error 5`] = `"Entity with ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" is of type \\"select\\" but expected \\"invalid\\"."`;

exports[`builder store > can reset a single entity attribute error 6`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "select",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": "label error",
            "title": "title error",
          },
        },
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "select",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can reset all attributes errors for a single entity 1`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "label error",
      "title": "title error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can reset all attributes errors for a single entity 2`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can reset all attributes errors for a single entity 3`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > can reset all attributes errors for a single entity 4`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": "label error",
            "title": "title error",
          },
        },
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can reset all attributes errors for all entities 1`] = `
{
  "entitiesAttributesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": {
      "title": "title error",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "label error",
    },
  },
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can reset all attributes errors for all entities 2`] = `
{
  "entitiesAttributesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": {
      "title": undefined,
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": undefined,
    },
  },
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can reset all attributes errors for all entities 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": {
            "title": "title error",
          },
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": "label error",
          },
        },
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can retrieve an entity 1`] = `
{
  "attributes": {},
  "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
  "type": "text",
}
`;

exports[`builder store > can retrieve the data 1`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "Some error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": "test",
        },
        "type": "text",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can return the data 1`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "some error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": "test",
        },
        "type": "text",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can set a single entity attribute error 1`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "Some error",
      "title": "Title error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can set a single entity attribute error 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > can set a single entity attribute error 3`] = `"Entity of type \\"test\\" does not have an attribute named \\"invalid\\"."`;

exports[`builder store > can set a single entity attribute error 4`] = `"Entity with ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" is of type \\"test\\" but expected \\"invalid\\"."`;

exports[`builder store > can set a single entity attribute error 5`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": "Some error",
          },
        },
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can set all attributes errors for all entities 1`] = `
{
  "entitiesAttributesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": {
      "title": "title error",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "label error",
    },
  },
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "description": undefined,
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "description": undefined,
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can set all attributes errors for all entities 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "description": "initial error",
          },
        },
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "description": undefined,
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "description": undefined,
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can set and reset the schema error 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {},
    "root": [],
  },
  "schemaError": "error",
}
`;

exports[`builder store > can set and reset the schema error 2`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {},
    "root": [],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can set and reset the schema error 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {},
          "root": [],
        },
        "schemaError": "error",
      },
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {},
          "root": [],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {},
          "root": [],
        },
        "schemaError": undefined,
      },
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {},
          "root": [],
        },
        "schemaError": "error",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can set multiple attribute errors for a single entity 1`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "some error",
      "title": "another error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "description": undefined,
          "label": undefined,
          "title": undefined,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can set multiple attribute errors for a single entity 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > can set multiple attribute errors for a single entity 3`] = `"Entity of type \\"test\\" does not have an attribute named \\"invalid\\"."`;

exports[`builder store > can set multiple attribute errors for a single entity 4`] = `"Entity with ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" is of type \\"test\\" but expected \\"invalid\\"."`;

exports[`builder store > can set multiple attribute errors for a single entity 5`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "description": "initial error",
          },
        },
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "description": undefined,
                "label": undefined,
                "title": undefined,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can set the data 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": "some error",
          },
        },
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "test",
              },
              "type": "text",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {},
          "root": [],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can set the data 2`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": "some error",
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": "test",
        },
        "type": "text",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can update entity attributes 1`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "maxLength": 1,
        },
        "type": "text",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": "New label",
          "required": true,
        },
        "type": "select",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can update entity attributes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "maxLength": 1,
              },
              "type": "text",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "Old label",
                "required": true,
              },
              "type": "select",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "maxLength": 1,
              },
              "type": "text",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "New label",
                "required": true,
              },
              "type": "select",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can validate a all attributes of a single entity 1`] = `
{
  "entitiesAttributesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "description": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
      "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
      "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
    },
  },
  "schema": {
    "entities": {
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "description": "",
          "label": 1,
          "maxLength": "1",
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can validate a all attributes of a single entity 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > can validate a all attributes of a single entity 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "description": "",
                "label": 1,
                "maxLength": "1",
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can validate a all attributes of all entities 1`] = `
{
  "entitiesAttributesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": {
      "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "description": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
      "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    },
  },
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "description": "1",
          "label": "test",
          "maxLength": "1",
        },
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "description": "",
          "label": 1,
          "maxLength": 1,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can validate a all attributes of all entities 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "description": "1",
                "label": "test",
                "maxLength": "1",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "description": "",
                "label": 1,
                "maxLength": 1,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can validate a single entity attribute 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
  "success": false,
}
`;

exports[`builder store > can validate a single entity attribute 2`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
  "success": false,
}
`;

exports[`builder store > can validate a single entity attribute 3`] = `
{
  "error": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`builder store > can validate a single entity attribute 4`] = `
{
  "data": "valid",
  "success": true,
}
`;

exports[`builder store > can validate a single entity attribute 5`] = `
{
  "entitiesAttributesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": {
      "description": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
      "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    },
  },
  "schema": {
    "entities": {
      "37515819-4f68-4e40-a391-aad5f51c26e2": {
        "attributes": {
          "description": "valid",
          "label": "valid",
        },
        "type": "test",
      },
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "description": "",
        },
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": 1,
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "37515819-4f68-4e40-a391-aad5f51c26e2",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can validate a single entity attribute 6`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > can validate a single entity attribute 7`] = `"Entity of type \\"test\\" does not have an attribute named \\"invalid\\"."`;

exports[`builder store > can validate a single entity attribute 8`] = `"Entity with ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" is of type \\"test\\" but expected \\"invalid\\"."`;

exports[`builder store > can validate a single entity attribute 9`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "37515819-4f68-4e40-a391-aad5f51c26e2": {
              "attributes": {
                "description": "valid",
                "label": "valid",
              },
              "type": "test",
            },
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "description": "",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": 1,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "37515819-4f68-4e40-a391-aad5f51c26e2",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
          },
        },
        "schema": {
          "entities": {
            "37515819-4f68-4e40-a391-aad5f51c26e2": {
              "attributes": {
                "description": "valid",
                "label": "valid",
              },
              "type": "test",
            },
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "description": "",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": 1,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "37515819-4f68-4e40-a391-aad5f51c26e2",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": {
            "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
          },
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
          },
        },
        "schema": {
          "entities": {
            "37515819-4f68-4e40-a391-aad5f51c26e2": {
              "attributes": {
                "description": "valid",
                "label": "valid",
              },
              "type": "test",
            },
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "description": "",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": 1,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "37515819-4f68-4e40-a391-aad5f51c26e2",
          ],
        },
        "schemaError": undefined,
      },
    ],
    [
      {
        "entitiesAttributesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": {
            "description": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
            "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
          },
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
          },
        },
        "schema": {
          "entities": {
            "37515819-4f68-4e40-a391-aad5f51c26e2": {
              "attributes": {
                "description": "valid",
                "label": "valid",
              },
              "type": "test",
            },
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "description": "",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": 1,
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
            "37515819-4f68-4e40-a391-aad5f51c26e2",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can validate the schema 1`] = `
{
  "entitiesAttributesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": {
      "title": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "title": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
    },
  },
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "label": "",
          "title": "",
        },
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": "",
          "title": "",
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": undefined,
}
`;

exports[`builder store > can validate the schema 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": {
            "title": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
          },
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "title": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
          },
        },
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "label": "",
                "title": "",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "",
                "title": "",
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
      {
        "entitiesAttributesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "label": "initial error",
          },
        },
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "label": "",
                "title": "",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "",
                "title": "",
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > can validate the schema 3`] = `
{
  "entitiesAttributesErrors": {},
  "schema": {
    "entities": {
      "51324b32-adc3-4d17-a90e-66b5453935bd": {
        "attributes": {
          "label": "",
          "title": "should fail",
        },
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c": {
        "attributes": {
          "label": "",
          "title": "1",
        },
        "type": "test",
      },
    },
    "root": [
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    ],
  },
  "schemaError": "Title validation failed",
}
`;

exports[`builder store > can validate the schema 4`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesAttributesErrors": {},
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "label": "",
                "title": "should fail",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "",
                "title": "1",
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": "Title validation failed",
      },
      {
        "entitiesAttributesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": {
            "title": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
          },
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "title": [ZodError: [
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "String must contain at least 1 character(s)",
    "path": []
  }
]],
          },
        },
        "schema": {
          "entities": {
            "51324b32-adc3-4d17-a90e-66b5453935bd": {
              "attributes": {
                "label": "",
                "title": "should fail",
              },
              "type": "test",
            },
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "attributes": {
                "label": "",
                "title": "1",
              },
              "type": "test",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "51324b32-adc3-4d17-a90e-66b5453935bd",
          ],
        },
        "schemaError": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`builder store > throws moving an entity to a non-allowed parent 1`] = `"Entities of type \\"test\\" are not allowed as children of entities of type \\"test\\"."`;

exports[`builder store > throws when adding an entity to a non allowed parent 1`] = `"Entities of type \\"text\\" cannot have a parent of type \\"section\\"."`;

exports[`builder store > throws when adding an entity to a parent with non-allowed children 1`] = `"Entities of type \\"test\\" are not allowed as children of entities of type \\"test\\"."`;

exports[`builder store > throws when adding an entity with a non-existent attribute 1`] = `"Entity of type \\"test\\" does not have an attribute named \\"invalid\\"."`;

exports[`builder store > throws when adding an entity with an already existent ID 1`] = `"An entity with the ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" already exists."`;

exports[`builder store > throws when adding an entity without a parent when parent is required 1`] = `"Entities of type \\"test\\" require a parent."`;

exports[`builder store > throws when adding moving an entity to a non allowed parent 1`] = `"Entities of type \\"text\\" cannot have a parent of type \\"section\\"."`;

exports[`builder store > throws when moving an entity to the root when parent is required 1`] = `"Entities of type \\"text\\" require a parent."`;

exports[`builder store > throws when setting a parent id to the only root entity 1`] = `"The root must contain at least one entity."`;

exports[`builder store > throws when setting an entity parent id to its grandchild 1`] = `"Entity with ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" is a direct child of entity \\"51324b32-adc3-4d17-a90e-66b5453935bd\\"."`;

exports[`builder store > throws when trying to add an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > throws when trying to delete non existent entity 1`] = `"Entity with ID \\"test\\" was not found."`;

exports[`builder store > throws when trying to move a non existent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > throws when trying to move a non existent entity 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > throws when trying to move an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > throws when updating an attribute of a non-existent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`builder store > throws when updating an attribute of an entity of wrong type 1`] = `"Entity with ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" is of type \\"test\\" but expected \\"invalid-entity-type\\"."`;

exports[`builder store > throws when updating an non-existent attribute of an entity 1`] = `"Entity of type \\"test\\" does not have an attribute named \\"invalid\\"."`;
